--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
+    "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.6.0",
-    "react-native-maps": "1.18.0"
+    "expo-sqlite": "~15.1.2",
+    "expo-splash-screen": "~0.29.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
